@@ -1,3 +1,8 @@
+2013-11-26  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/58700
+	* g++.dg/parse/bitfield4.C: New.
+
 2013-11-26  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/59287
